<resources>
    <string name="app_name">Story</string>
    <string name="login_text_message">Come on log in first to explore your new world…</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="welcome_text_message">Welcome to Our Journey</string>
    <string name="login_button_text">LOGIN</string>
    <string name="register_button_text">REGISTER</string>
    <string name="password_min8_message">Minimum 8 characters</string>
    <string name="email_format_message">Incorrect format</string>
    <string name="hint_name">Name</string>
    <string name="register_text_message">Register to become an explorer here</string>
    <string name="loading_message">Wait a moment…</string>
    <string name="loading_sub_message">Take some coffee while waiting</string>
    <string name="register_success_message">Register success</string>
    <string name="register_failed_message">Register failed</string>
    <string name="login_failed_message">Login failed</string>
    <string name="no_available_data_message">No available data</string>
    <string name="desc_more_text">more</string>
    <string name="desc_less_text">less</string>
    <plurals name="diff_time_seconds">
        <item quantity="one">%1$d second ago</item>
        <item quantity="other">%1$d seconds ago</item>
    </plurals>
    <plurals name="diff_time_minutes">
        <item quantity="one">%1$d minute ago</item>
        <item quantity="other">%1$d minutes ago</item>
    </plurals>
    <plurals name="diff_time_hours">
        <item quantity="one">%1$d hour ago</item>
        <item quantity="other">%1$d hours ago</item>
    </plurals>
    <plurals name="diff_time_days">
        <item quantity="one">%1$d day ago</item>
        <item quantity="other">%1$d days ago</item>
    </plurals>
    <plurals name="diff_time_weeks">
        <item quantity="one">%1$d week ago</item>
        <item quantity="other">%1$d weeks ago</item>
    </plurals>
    <plurals name="diff_time_months">
        <item quantity="one">%1$d month ago</item>
        <item quantity="other">%1$d months ago</item>
    </plurals>
    <plurals name="diff_time_years">
        <item quantity="one">%1$d year ago</item>
        <item quantity="other">%1$d years ago</item>
    </plurals>
    <string name="logout_text">Logout</string>
    <string name="upload_button_text">UPLOAD</string>
    <string name="camera_button_text">CAMERA</string>
    <string name="gallery_button_text">GALLERY</string>
    <string name="hint_description">Description</string>
    <string name="content_desc_story_photo">The Story Photo</string>
    <string name="content_desc_action_to_back_page">Action to back page</string>
    <string name="add_story_text">Create your story</string>
    <string name="no_media_message">No media selected</string>
    <string name="permission_granted">Permission request granted</string>
    <string name="permission_denied">Permission request denied</string>
    <string name="location_service_is_not_active">Location service is not active</string>
    <string name="from_city_location_text">From %1$s</string>
    <string name="content_desc_add_new_story">Add new story</string>
    <string name="upload_story_failed_message">Upload story failed</string>
</resources>